unpackaged/main/default/objects/Registration_Type__mdt/Registration_Type__mdt.object-meta.xml
<CustomObject>
    <label>Registration Type</label>
    <pluralLabel>Registration Types</pluralLabel>
</CustomObject>