unpackaged/main/default/objects/Registration_Type__mdt/fields/American_Funds_F2__c.field-meta.xml
<CustomField>
    <fullName>American_Funds_F2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>American Funds F2</label>
    <type>Checkbox</type>
</CustomField>