unpackaged/main/default/objects/Registration_Type__mdt/fields/BD_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>BD_Account_Type__c</fullName>
    <description>For Maestro.</description>
    <label>BD Account Type</label>
    <length>3</length>
    <type>Text</type>
</CustomField>