unpackaged/main/default/objects/Registration_Type__mdt/fields/Beneficiary_Account__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beneficiary Account</label>
    <type>Checkbox</type>
</CustomField>