unpackaged/main/default/objects/Registration_Type__mdt/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>