unpackaged/main/default/objects/Registration_Type__mdt/fields/Fidelity__c.field-meta.xml
<CustomField>
    <fullName>Fidelity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fidelity</label>
    <type>Checkbox</type>
</CustomField>