unpackaged/main/default/objects/Registration_Type__mdt/fields/Joint_Account__c.field-meta.xml
<CustomField>
    <fullName>Joint_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Joint Account</label>
    <type>Checkbox</type>
</CustomField>