unpackaged/main/default/objects/Registration_Type__mdt/fields/RBC__c.field-meta.xml
<CustomField>
    <fullName>RBC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RBC</label>
    <type>Checkbox</type>
</CustomField>