unpackaged/main/default/objects/Registration_Type__mdt/fields/Schwab__c.field-meta.xml
<CustomField>
    <fullName>Schwab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schwab</label>
    <type>Checkbox</type>
</CustomField>