unpackaged/main/default/objects/Registration_Type__mdt/listViews/All_Registration_Types.listView-meta.xml
<ListView>
    <fullName>All_Registration_Types</fullName>
    <columns>MasterLabel</columns>
    <columns>Code__c</columns>
    <columns>DeveloperName</columns>
    <columns>Qualified__c</columns>
    <columns>Business_Account__c</columns>
    <columns>Joint_Account__c</columns>
    <columns>Beneficiary_Account__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Registration Types</label>
</ListView>